[gd_scene load_steps=51 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/shield_shader.tres" type="Material" id=2]
[ext_resource path="res://Assets/Art/idle/santa-idle_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/idle/santa-idle_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/idle/santa-idle_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/idle/santa-idle_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/idle/santa-idle_5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/idle/santa-idle_6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_6.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/jump-up/santa-jump_7.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_5.png" type="Texture" id=20]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_6.png" type="Texture" id=21]
[ext_resource path="res://Assets/Art/jump-down/santa-jump-down_7.png" type="Texture" id=22]
[ext_resource path="res://Assets/Art/die/santa-die_1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Art/die/santa-die_2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Art/die/santa-die_3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Art/die/santa-die_4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Art/die/santa-die_5.png" type="Texture" id=27]
[ext_resource path="res://Assets/Art/die/santa-die_6.png" type="Texture" id=28]
[ext_resource path="res://Assets/Art/die/santa-die_7.png" type="Texture" id=29]
[ext_resource path="res://Assets/Art/die/santa-die_8.png" type="Texture" id=30]
[ext_resource path="res://Assets/Art/die/santa-die_9.png" type="Texture" id=31]
[ext_resource path="res://Assets/Art/die/santa-die_10.png" type="Texture" id=32]
[ext_resource path="res://Assets/Art/die/santa-die_11.png" type="Texture" id=33]
[ext_resource path="res://Assets/Art/die/santa-die_12.png" type="Texture" id=34]
[ext_resource path="res://Assets/Art/run/santa-run_1.png" type="Texture" id=35]
[ext_resource path="res://Assets/Art/run/santa-run_2.png" type="Texture" id=36]
[ext_resource path="res://Assets/Art/run/santa-run_3.png" type="Texture" id=37]
[ext_resource path="res://Assets/Art/run/santa-run_4.png" type="Texture" id=38]
[ext_resource path="res://Assets/Art/run/santa-run_5.png" type="Texture" id=39]
[ext_resource path="res://Assets/Art/run/santa-run_6.png" type="Texture" id=40]
[ext_resource path="res://Assets/Art/run/santa-run_7.png" type="Texture" id=41]
[ext_resource path="res://player/OneTime.gd" type="Script" id=42]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "jump",
"speed": 30.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "fall",
"speed": 6.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "jump_down",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "dead",
"speed": 30.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 70.8698
height = 176.594

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/santa_claus:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 110, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/santa_claus:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.2
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "test"
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/santa_claus:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/santa_claus:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "jump", "jump_down" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/santa_claus:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 1, 2, 4, 5, 6 ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="santa_claus" type="AnimatedSprite" parent="Node2D"]
light_mask = 2
material = ExtResource( 2 )
position = Vector2( 0, -5 )
z_index = 1
frames = SubResource( 1 )
animation = "fall"
frame = 6

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/dead = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/run = SubResource( 7 )
anims/test = SubResource( 8 )

[node name="OneTime" type="Node2D" parent="."]
script = ExtResource( 42 )
[connection signal="timeout" from="OneTime" to="." method="_on_OneTime_timeout"]
